--- a/ComputerScience/델리게이트와 이벤트.md
+++ b/ComputerScience/델리게이트와 이벤트.md
@@ -1,1 +1,34 @@
+<h4>델리게이트란</h4>
 
+> 델리게이트는 하나의 형식으로, 메서드에 대한 참조이다.   
+> 델리게이트는 인스턴스 메서드, 정적 메서드 모두 참조할 수 있다.   
+> 대리자는 현재 자신이 참조하고 있는 메소드 코드를 실행하고 그 결과를 호출자에게 반환한다.   
+> 기존 델리게이트에 메소드참조가 추가되는 것은 기존 델리게이트가 변경되는 것이 아니라 새로운 델리게이트가 생성되는 것으로 Delegate는 Immutable 형식이다.
+
+<h4>이벤트란</h4>
+
+> 이벤트는 델리게이트를 사용하여 구현하는데 이벤트핸들러 델리게이트를 선언하고 이벤트가 호출되었을 때 이벤트핸들러를 호출하여 실행하도록 한다.   
+> 이벤트는 델리게이트를 이벤트 한정자로 수식해서 만든다.   
+> 이벤트는 메세지 브로드캐스트 방식을 가진다.   
+> 다른 모든 구성요소는 이벤트를 구독하고 이벤트가 발생할 때 알림을 받을 수 있다.   
+
+<h4>델리게이트와 이벤트의 차이</h4>
+
+> 델리게이트와 이벤트는 둘 다 런타임 바인딩 시나리오를 제공한다.   
+> 둘다 단일 및 다중 구독 메서드를 지원하고 이벤트 발생과 대리자 호출은 동일한 메서드 호출 구문을 사용한다.   
+> 둘의 가장 큰 차이점은 이벤트는 인터페이스 내부에 선언할 수 있지만, 델리게이트는 선언할 수 없다.   
+> 이벤트는 public으로 선언되어 있어도, 자신이 선언되어 있는 클래스 외부에서 호출할 수 없다.   
+> 이는 이벤트 기반 프로그래밍에서 안정성을 추구하는 것으로, 클래스 외부에서 이벤트에 변화를 줄 수 없게 하기 위해서이다.   
+> 델리게이트는 주로 콜백 용도로, 이벤트는 객체의 상태변화 또는 사건의 발생을 알리는 용도로 쓴다.   
+
+<h3>Action, Func란</h3>
+
+> 델리게이트는 변수 타입이 아닌 형식이라서 선언 후 인스턴스를 만들어서 사용해야 하는데
+> Action과 Func는 미리 선언돼 있는 제네릭 델리게이트 변수로써 별도의 선언이 필요 없다.   
+> Action은 반환 값이 없고, Func은 반환 값이 있다는 차이가 있다.
+
+<h3>Invoke와 BeginInvoke란</h3>
+
+> Invoke는 사용할 대리자를 동기적으로 실행시키는 방법이다.   
+> 이 때 동기적으로 실행하므로 일정 시간을 기다린 후 동작하도록 할 수 있다.   
+> BeginInvoke는 본인 스레드가 아닌 다른 스레드를 이용하여 비동기식으로 실행하는 방법이다.
