--- a/DesignPattern/상태패턴과 전략패턴.md
+++ b/DesignPattern/상태패턴과 전략패턴.md
@@ -12,18 +12,25 @@
 
 <h3>상태패턴과 전략패턴의 차이는</h3>
 
-> 전략패턴은 특정 행동에 대한 방법을 여러가지 가질 때 사용하고
+> 전략패턴은 특정 행동에 대한 방법을 여러가지 가질 때 사용하고   
 > 상태패턴은 여러 상태를 가지고 각 상태에 대한 행동을 하도록 하고 싶을 때 사용한다.
 
 
 <h3>유한상태머신이란</h3>
 
-> 유한한 개수의 상태들로 구성된 기계를 의미한다.
-> 특정 객체의 상태들을 관리하기 위한 패턴으로 하나의 상태만을 가지고 전이 조건에 따라 다른 상태로 넘어가게 됩니다.
-> 유한상태머신을 상태패턴으로 구현할 수 있지만 상태에 대한 동작이 너무 많아진다면 다른 구현을 고려하는 것도 좋다.
+> 유한한 개수의 상태들로 구성된 기계를 의미한다.   
+> 특정 객체의 상태들을 관리하기 위한 패턴으로 하나의 상태만을 가지고 전이 조건에 따라 다른 상태로 넘어가게 됩니다.   
+> 유한상태머신을 상태패턴으로 구현할 수 있지만 상태에 대한 동작이 너무 많아진다면 다른 구현을 고려하는 것도 좋다.   
 
 <h3>유한상태머신을 쓰는 이유</h3>
 
-> 상태와 전이에 대해 명확히 규정할 수 있다.
-> 상태 중복을 피할 수 있다.
+> 상태와 전이에 대해 명확히 규정할 수 있다.   
+> 상태 중복을 피할 수 있다.   
 > 상태의 전이, 동작에 대해 명확하게 규정하여 안정적인 작동을 보장할 수 있다.
+
+<h3>유한상태머신을 쓰지 않아야 하는 이유</h3>
+
+> 상태들이 너무 많아지면 코드가 너무 복잡해져서 전이 조건에 대해서만 해도 한참을 연산해야 할 수 있다.   
+> HFSM을 사용하면 상태가 하위 구조를 가져서 직관적으로 깔끔하게 구현할 수 있다.   
+> 행동 트리를 사용하면 HFSM을 개선시킨 구조로 루트 노드가 상태 노드를 정하고 상태 노드는 독립적인 행동 노드들을 컨트롤합니다.   
+> HFSM이 수평 구조라면 BT는 수직 구조를 가지고 있습니다. 
