--- a/자료구조/트리와 그래프.md
+++ b/자료구조/트리와 그래프.md
@@ -1,15 +1,33 @@
+<h3>그래프란</h3>
+
+> 노드와 간선으로 이루어진 자료구조다.   
+> 2개 이상의 경로가 가능하고, 노드 사이에 방향/무방향 간선이 가능하다.   
+> 순환 구조를 가질 수 있다.   
+> 예시 : 지도, 지하철 노선도, 전기회로의 소자
+
+
 <h3>트리란</h3>
 
 > 노드와 간선으로 이루어진 자료구조다.   
 > 트리는 사이클(순환)이 존재할 수 없고 모든 노드는 자료형으로 표현이 가능하다.   
 > 루트에서 한 노드로 가는 경로는 유일한 경로이다.   
-> 최초의 루트 노드부터 시작해 하나의 부모 노드는 여러개의 자식 노드를 가질 수 있다.
+> 최초의 루트 노드부터 시작해 하나의 부모 노드는 여러개의 자식 노드를 가질 수 있다.   
+> 예시 : 이진 트리, 이진 탐색 트리, 균형 트리, 이진 힙
+
+
+<h3>그래프와 트리의 차이</h3>
+
+> 트리는 그래프의 한 종류로, 방향성이 있는 비순환 그래프이다.   
+> 트리는 루트 노드를 가지고, 부모-자식 관계를 가진다.   
+> 루트노드는 한 개만 존재하며, 루트노드를 제외한 노드는 한 개의 부모노드만 가진다.
+
 
 <h3>트리의 종류</h3>
 
 > 이진 트리 : 각 노드가 최대 두개의 자식만 가질 수 있는 트리 구조   
 > 포화 이진 트리 : 모든 리프 노드가 같은 계층에 위치한 트리 구조   
 > 완전 이진 트리 : 마지막 계층 이전까지의 계층이 포화 이진 트리를 이룬 구조, 마지막 계층은 왼쪽부터 채워지고 일차원 배열로 표현될 수 있다.
+
 
 <h3>트리의 순회 방식</h3>
 
